--- a/css/mobile.css
+++ b/css/mobile.css
@@ -59,7 +59,7 @@
 
     @media (max-width: 600px){
         #carousel .carousel .carousel-content h1{
-            font-size: 2.5rem;
+            font-size: 3rem;
         }
     #services-article .articles-container{
         grid-template-columns: 1fr;
@@ -74,7 +74,9 @@
     }
 
     @media (max-width: 400px){
-       
+        #carousel .carousel .carousel-content h1{
+            font-size: 2.5rem;
+        }
         #main-footer .footer-container{
             grid-template-columns:  1fr;
         }
