--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,105 +1,170 @@
-@media (max-width: 765px){
-    /* navigation */
+@media (max-width: 830px) {
+  /* ------------------------------hero  section---------------------- */
+  .hero-section h1 {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 
-#main-nav .social{
+  .hero-section img {
+    width: 55%;
+  }
+  #category p {
+    padding-right: 0;
+  }
+}
+@media (max-width: 800px) {
+  /* navigation */
+  #main-nav img {
+    width: 60px;
+  }
+  .menu {
     display: none;
-}
-#main-nav .container,
-#couple .carousel{
-    grid-template-columns: 1fr;
-    grid-gap: 1.3rem;
-}
-#main-nav ul,
-#main-nav h2{
-    justify-self: center;
-}
-
-#main-nav ul li a{
-    padding: .55rem;
-} 
-
-/* carousel- section */
-#carousel .carousel{
-    grid-template-columns: 1fr;
-}
-#carousel .carousel .carousel-content p{
-    color: var(--li-primary-color);
-    font-weight: bold;
-}
-
-/* category section */
-#category .flex-container{
     flex-direction: column;
-}
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .menu.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #f0f0f0f0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 20px;
+  }
 
+  .nav-toggle-label {
+    display: block;
+  }
 
-/* showcase section  */
-#showcase.container{
+  #main-nav ul {
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    font-size: 20px;
+  }
+
+  #main-nav ul li a {
+    padding: 0.55rem;
+  }
+
+  /* category section */
+  #category .flex-container {
+    flex-direction: column;
+  }
+
+  /* showcase section  */
+  .features .container {
     overflow: none;
-}
-#showcase {
+  }
+  .features {
     display: grid;
     grid-template-columns: repeat(1, 3fr);
     grid-gap: 1rem;
     height: 850px;
-}
+  }
 
+  /* services page stlying */
 
-/* services page stlying */
-
-/* service-article */
-#services-article .articles-container{
+  /* service-article */
+  #services-article .articles-container {
     grid-template-columns: repeat(2, 1fr);
-}
-#services-article .articles-container > *:first-child,
-#services-article .articles-container > *:nth-child(7),
-#services-article .articles-container > *:nth-child(8){
-    grid-template-columns:  1fr;
-    grid-column: 1 ;
-}
-
-
-/* for about page */
-.page-container{
+  }
+  #services-article .articles-container > *:first-child,
+  #services-article .articles-container > *:nth-child(7),
+  #services-article .articles-container > *:nth-child(8) {
     grid-template-columns: 1fr;
-}
-#about .page-container .card h1{
+    grid-column: 1;
+  }
+
+  /* for about page */
+  .page-container {
+    grid-template-columns: 1fr;
+  }
+  #about .page-container .card h1 {
     text-align: center;
-}
-
-    @media (max-width: 600px){
-    #carousel .carousel .carousel-content h1{
-            font-size: 3rem;
-        }
-    #services-article .articles-container{
-        grid-template-columns: 1fr;
+  }
+  /* ---------------------------------------------------------- */
+  @media (max-width: 600px) {
+    #carousel .carousel .carousel-content h1 {
+      font-size: 3rem;
     }
-    #main-footer .footer-container{
-        grid-template-columns: repeat(2, 1fr);
+    #services-article .articles-container {
+      grid-template-columns: 1fr;
     }
-    #main-footer .footer-container > *:last-child{
-        grid-column: 1 /span 2 ;
+    #main-footer .footer-container {
+      grid-template-columns: repeat(2, 1fr);
     }
-
+    #main-footer .footer-container > *:last-child {
+      grid-column: 1 / span 2;
     }
+  }
+  /* -------------------Mobile Phones------------------- */
+  @media (max-width: 430px) {
+    .hero-details {
+      flex-direction: column;
+      padding: 20px 20px;
+    }
+    .hero-content {
+      width: 100%;
+    }
+    .hero-section h1 {
+      font-size: 38px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .hero-section p {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .action-btn {
+      /* width: 100%; */
+      text-align: center;
+    }
+    .hero-section img {
+      width: 100%;
+    }
+    .core-value {
+      flex-wrap: wrap;
+    }
+    #category {
+      margin-top: 80px;
+    }
+    .two-col {
+      flex-direction: column;
 
-    @media (max-width: 400px){
-        #carousel .carousel .carousel-content h1{
-            font-size: 2.5rem;
-        }
-        #main-footer .footer-container{
-            grid-template-columns:  1fr;
-        }
-        #main-footer .footer-container > *:last-child{
-            grid-column: 1  ;
-        }
-        #main-footer .footer-container > *:first-child,
-        #main-footer .footer-container > *:nth-child(2){
-            border-bottom: #444 dotted 1px;
-            padding-bottom: 1rem;
-        }
-        }
-
-
-
+      text-align: center;
+    }
+    .two-col .content {
+      width: 100%;
+    }
+    #category .img {
+      width: 100%;
+    }
+    #supply {
+      padding: 60px 0;
+    }
+    hr {
+      width: 50%;
+    }
+    #main-footer .footer-container {
+      grid-template-columns: 1fr;
+    }
+    #main-footer .footer-container > *:last-child {
+      grid-column: 1;
+    }
+    #main-footer .footer-container > *:first-child,
+    #main-footer .footer-container > *:nth-child(2) {
+      border-bottom: #444 dotted 1px;
+      padding-bottom: 1rem;
+    }
+  }
 }
