--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,45 +1,68 @@
 /* varables  */
-:root{
-    --li-primary-color: #FF8B13;
-    --primary-color: #FF731D;
-    --secondary-color: #990000;
-    --li-secondary-color: #DC0000;
-    --light-color: #fff;
-    --fade-color: #969696;
-    --dark-color: #000;
-    --max-width: 1100px;
+:root {
+  --primary-color: #022c43;
+  --li-primary-color: #115173;
+
+  --main-color: #ff731d;
+
+  --secondary-color: #990000;
+  --li-secondary-color: #dc0000;
+
+  --light-color: #fff;
+  --fade-color: #b4b4b8;
+  --dark-color: #000;
+
+  --max-width: 1400px;
 }
 
-.text-primary{
-    color: var(--primary-color);
+.text-primary {
+  color: var(--primary-color);
 }
-.text-light{
-    color: var(--light-color);
+.text-light {
+  color: var(--light-color);
 }
-.text-li-sec{
-    color: var(--li-secondary-color);
+.text-main {
+  color: var(--main-color);
 }
-.text-fade{
-    color: var(--fade-color);
+.text-li-sec {
+  color: var(--li-secondary-color);
+}
+.text-fade {
+  color: var(--fade-color);
+}
+.txt-p-light {
+  color: var(--li-primary-color);
+}
+.txt-dark {
+  color: var(--dark-color);
+}
+.card {
+  background: var(--light-color);
+  padding: 1rem;
 }
 
-.card{
-    background: var(--light-color);
-    padding: 1rem;
+.bg-light {
+  background: var(--light-color);
+  color: var(--dark-color);
 }
-
-.bg-light{
-    background: var(--light-color);
-    color: var(--dark-color);
+.bg-dark {
+  background: var(--dark-color);
+  color: var(--light-color);
 }
-.bg-dark{
-    background: var(--dark-color);
-    color: var(--light-color);
+.bg-li-primary {
+  background: var(--li-primary-color);
 }
-.bg-li-primary{background: var(--li-primary-color);}
-.bg-primary{background: var(--primary-color);}
-.bg-secondary{background: var(--secondary-color); color: var(--light-color);}
-.bg-li-secondary{background: var(--li-secondary-color);}
+.bg-primary {
+  background: var(--primary-color);
+  color: var(--light-color);
+}
+.bg-secondary {
+  background: var(--secondary-color);
+  color: var(--light-color);
+}
+.bg-li-secondary {
+  background: var(--li-secondary-color);
+}
 
 .bg-dark h1,
 .bg-dark h2,
@@ -52,93 +75,101 @@
 .bg-secondary h1,
 .bg-secondary h2,
 .bg-secondary h3,
-.bg-secondary a{
-    color: var(--light-color);
+.bg-secondary a {
+  color: var(--light-color);
 }
-.btn{
-    cursor: pointer;
-    display: inline-block;
-    padding: 10px 30px;
-    color: #fff;
-    background-color:var(--li-primary-color);
-    border: none;
-    border-radius: 3px;
-    margin-top: 10px;
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 3px;
+  margin-top: 10px;
+  transition: all 0.3s;
 }
-.btn:hover{
-    opacity: 0.8;
+.btn-full {
+  color: #fff;
+  background-color: var(--primary-color);
 }
-.btn-dark{
-    background: var(--dark-color);
+.btn-full:hover {
+  background-color: #022336;
 }
-.btn-block{
-    display: block;
-    width: 100%;
-    text-align: center;
-    border-radius: 0;
+.btn-outline {
+  color: #fff;
+  box-shadow: inset 0 0 0 3px #fff;
 }
-
-
-
-.flex-container{
-    display: flex;   
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+.btn-outline:hover {
+  color: #fff;
+  box-shadow: inset 0 0 0 3px var(--primary-color);
 }
-
-.container{
-    max-width: var(--max-width);
-    margin: auto;
-    padding: 0 2rem;
-    overflow: hidden;
+.btn-dark {
+  background: var(--dark-color);
 }
-.container-fluid{
-    color: #fff;
-    background: #333;
-    padding: 2rem;
-    position: relative;
-    margin: 0;
-}
-.container-fluid::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.9;
-}
-.page-container{
-    display: grid;
-    grid-template-columns: 5fr 2fr;
-    margin: 2rem 0;
-    grid-gap: 1.5rem;
-    text-align: justify;
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
+  border-radius: 0;
 }
 
-.page-container >*:first-child{
-    grid-row: 1 / span 3;
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.container {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 0 2rem;
+  overflow: hidden;
+}
+.container-fluid {
+  color: #fff;
+  background: #333;
+  padding: 2rem;
+  position: relative;
+  margin: 0;
+}
+.container-fluid::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+}
+.page-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  margin: 2rem 0;
+  grid-gap: 1.5rem;
+  text-align: justify;
+}
+
+.page-container > *:first-child {
+  grid-row: 1 / span 3;
 }
 
 /* category */
-.text-btn{
-    display: inline-block;
-    color: #fff;
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    padding: 0.4rem 0.6rem;
-    border-radius: 15px;
-    margin-bottom: 0.5rem;
+.text-btn {
+  display: inline-block;
+  color: #fff;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  padding: 0.4rem 0.6rem;
+  border-radius: 15px;
+  margin-bottom: 0.5rem;
 }
 
-
-.list li{
-    padding: .3rem 0;
-    border-bottom: #555 dotted 1px;
-    width: 90%; 
+.list li {
+  padding: 0.3rem 0;
+  border-bottom: #555 dotted 1px;
+  width: 90%;
 }
-.list li a:hover{
-    color: var(--li-primary-color) ; 
-}
+/* .list li a:hover {
+  color: var(--li-primary-color);
+} */
